static/css/custom.css
body {
    background-color: #1e85ae;
    color: #cce;
    padding-bottom: 30px;
}

a {
    color: #aac;
}

.navbar-default {
    background-color: skyblue;
    color: #07212c;
    border: 0;
}

.navbar-default .navbar-nav li.active a, .navbar-default .navbar-nav .open .dropdown a,
.navbar-default .navbar-nav li.active a:hover, li.dropdown.open {
    background-color: #1e85ae;
}

.navbar-default .navbar-nav li.active a:hover {
    color: #cce;
}

.navbar-brand {
    font-family: "Dancing Script", cursive;
    font-size: 28px;
}

.message {
    border-radius: 5px;
    color: black;
    padding-top: 10px;
    padding-bottom: 10px;
    font-weight: bold;
    font-size: 16px;
}

.message.success {
    background-color: darkolivegreen;
    border-top: 3px dotted green;
    border-bottom: 3px dotted green;
}

.message.error {
    background-color: darkred;
    border-top: 3px dotted red;
    border-bottom: 3px dotted red;
}

.message.last {
    margin-bottom: 20px;
}

#new-messages {
    position: fixed;
    bottom: 0;
    right: 0;
    width: 100vw;
    height: 30px;
    z-index: 1;
    text-align: center;
    background-color: white;
    color: #1e85ae;
    font-weight: bold;
    font-size: 16px;
}

/*#new-messages a {
    animation: flash 1s ease-in-out 0s infinite alternate;
}

@keyframes flash {
    0% {opacity: 0;}
    100% {opacity: 1;}
}*/

.media {
    text-align: center;
    margin: 20px 0;
}

.media-row {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: flex-start;
}

.media-flex {
    margin: 10px;
}

.instrument-description {
    border: 1px solid black;
    background-color: #737373;
    margin: 20px;
    color: white;
    padding: 5px;
}

#dashboard-buttons button {
    width: 125px;
    text-align: center;
    margin: 10px;
}

.form-group .radio, .form-group .checkbox {
    display: inline-block;
    margin: 0 20px;
}

.has-error .checkbox, .has-error .radio, .has-error .control-label {
    color: inherit;
}

.has-error [id^="error_id"] {
    font-weight: bold;
    font-size: 16px;
    color: darkred;
}

/*#location-mw-wrap {
    max-width: 100vw;
    min-width: 330px;
}*/

#instruments-heading {
    color: white;
    margin: 30px 0 15px 0;
}

.instrument-form {
    margin: 10px 0 20px 0;
    border: 1px solid black;
    padding: 5px;
    overflow: hidden; /*needed to keep the floating "delete row" button inside the box*/
    background-color: #737373;
    color: white;
}

.delete-row {
    float: right;
}

.add-row {
    margin-bottom: 20px;
}

.table {
    border: 3px solid white;
    background-color: #0f4357;
    margin-top: 20px;
}

.table tbody tr:nth-of-type(odd) {
    background-color: #737373;
}

.table tr.first-wanted td {
    border-top-width: 3px;
}

tr.first-wanted td:first-child {
    font-weight: bold;
    font-size: 16px;
}

.user-match-list {
    display: none;
    list-style-type: none;
    padding: 0;
}

.clickable {
    text-decoration: underline;
}

.hide-it {
    margin-top: 5px;
}

.clickable:hover {
    cursor: pointer;
}

.message-list {
    margin-top: 20px;
}

.message-list table {
    margin-top: 0;
}

.unread-message {
    font-weight: bold;
    color: darkturquoise;
}

tr[id^="message-no-"] {
    display: none;
}

.my-username {
    color: yellowgreen;
    font-weight: bold;
    font-size: 16px;
}

.message-text {
    background-color: #737373;
    color: white;
    padding: 5px;
    border: 1px solid black;
    margin-top: 15px;
}

